deploymysql.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment-mysql
spec:
  selector:
    matchLabels:
      application: wordpress
      mode: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      name: mysql-pod
      labels:
        application: wordpress
        mode: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
